--- a/Dockerfile.x86
+++ b/Dockerfile.x86
@@ -1,4 +1,4 @@
-FROM nvcr.io/nvidia/l4t-cuda:10.2.460-runtime
+FROM ubuntu:bionic
 
 ENV ROS_DISTRO=galactic
 ENV ROS_ROOT=/ros
@@ -56,10 +56,10 @@ RUN python3 -m pip install -U \
 RUN python3 -m pip install -U importlib-metadata importlib-resources
 # Install new Cmake
 WORKDIR ${DEPS_ROOT}/cmake
-RUN  wget https://github.com/Kitware/CMake/releases/download/v3.23.2/cmake-3.23.2-linux-aarch64.sh && \
-  chmod +x cmake-3.23.2-linux-aarch64.sh && \
-  yes | ./cmake-3.23.2-linux-aarch64.sh
-ENV PATH=${DEPS_ROOT}/cmake/cmake-3.23.2-linux-aarch64/bin/:${PATH}
+RUN  wget https://github.com/Kitware/CMake/releases/download/v3.23.2/cmake-3.23.2-linux-x86_64.sh && \
+  chmod +x cmake-3.23.2-linux-x86_64.sh && \
+  yes | ./cmake-3.23.2-linux-x86_64.sh
+ENV PATH=${DEPS_ROOT}/cmake/cmake-3.23.2-linux-x86_64/bin/:${PATH}
 
 RUN apt-get update --fix-missing
 # Compile & Install PCL
@@ -67,7 +67,6 @@ RUN apt-get install -y \
   libeigen3-dev \
   libboost-all-dev \
   libflann-dev
-
 
 WORKDIR ${DEPS_ROOT}
 RUN git clone https://github.com/google/googletest.git -b v1.12.0 && \
@@ -78,7 +77,7 @@ RUN git clone https://github.com/google/googletest.git -b v1.12.0 && \
 RUN git clone https://github.com/PointCloudLibrary/pcl.git -b pcl-1.12.1 && \
   mkdir -p pcl/build && cd pcl/build && \
   cmake .. -DCMAKE_BUILD_TYPE=Release -DBUILD_visualization=OFF -DWITH_VTK=OFF -DBUILD_ml=OFF -DWITH_OPENGL=OFF && \
-  make -j2 install
+  make -j6 install 
 
 # Get ROS dependencies
 RUN mkdir -p ${ROS_ROOT}/src && \
